# mechax_auto_aim

./: README.md  run.sh
install/: local_setup.sh  setup.sh
install/armor_detector/include/armor_detector/: detector.hpp  detector_node.hpp
install/armor_detector/lib/armor_detector/: armor_detector_node
install/armor_detector/share/armor_detector/: package.sh
install/auto_aim_interfaces/share/auto_aim_interfaces/: package.sh
install/bringup/share/bringup/: package.sh  package.xml
install/my_ros2_opencv_pkg/lib/my_ros2_opencv_pkg/: my_video_publisher
install/my_ros2_opencv_pkg/share/my_ros2_opencv_pkg/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/my_ros2_opencv_pkg/share/my_ros2_opencv_pkg/launch/: Three.launch.py
install/new_armor_tracker/include/new_tracker/: new_tracker_node.hpp
install/new_armor_tracker/lib/new_armor_tracker/: new_armor_tracker_node
install/new_armor_tracker/share/new_armor_tracker/: local_setup.dsv  local_setup.sh  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/my_ros2_opencv_pkg/: CMakeLists.txt
src/my_ros2_opencv_pkg/src/: my_video_publisher.cpp
src/rm_auto_aim/armor_detector/include/armor_detector/: detector_node.hpp
src/rm_auto_aim/armor_detector/src/: detector.cpp  detector_node.cpp
src/rm_auto_aim/new_tracker/: CMakeLists.txt  package.xml
src/rm_auto_aim/new_tracker/install/: local_setup.sh  setup.sh
src/rm_auto_aim/new_tracker/src/: new_tracker_node.cpp
(+7 files in other folders)
