<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="2361398121@qq.com">ghlins</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rm_auto_aim</depend>
  <depend>my_ros2_opencv_pkg</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
